# scryfall_clone

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
scryfall_clone/: main.py
scryfall_clone/api/: deps.py
scryfall_clone/api/v1/: api.py
scryfall_clone/api/v1/endpoints/: cards.py
scryfall_clone/core/: card_search.py
scryfall_clone/db/: engine.py
scryfall_clone/models/: __init__.py  card.py  card_set.py  legality.py  ruling.py  token.py
scryfall_clone/schemas/: __init__.py  card.py  card_set.py
tests/: test_scryfall_clone.py
